bin_PROGRAMS = aprsinject
aprsinject_SOURCES = \
                     App.cpp \
                     DBI.cpp \
                     main.cpp \
                     MemcachedController.cpp \
                     Store.cpp \
                     Validator.cpp \
                     Worker.cpp

aprsinject_LDFLAGS=-export-dynamic -lmysqlpp
